# machine_learning_zoomcamp

./: terminal_commands
01-Intro/: homework.ipynb
02-Car price prediction/: Homework.ipynb  Regularization.ipynb  car_price_pred.ipynb
02-car price prediction/: Homework.ipynb  Regularization.ipynb
03-churn prediction/: churn-prediction.ipynb  homework.ipynb
04-evaluation metrics/: churn_prediction.py  evaluation_metrics.ipynb  homework.ipynb
05-deployment/: Dockerfile  churn_prediction.py  model.pkl  predict.py  pyproject.toml
06-decision trees and ensemble learning/: credit_risk_project.ipynb  homework.ipynb
capstone-1/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
capstone-1/.history/: Dockerfile_20260104234001  Dockerfile_20260107222157  requirements_20260104234000.txt
capstone-1/.history/src/: dataset_20260107222634.py  inference_20260107222711.py  model_20260104234002.py  model_20260107222615.py  predict_20260104234002.py  predict_20260107222051.py  predict_20260107222056.py  predict_20260107222130.py  predict_20260107222721.py  train_20260104234002.py  (+1 more)
capstone-1/models/: features.pkl  imputer.pkl  metadata.pkl  model.pt  scaler.pkl
capstone-1/notebooks/: notebook.ipynb
capstone-1/src/: app.py  inference.py  predict.py  preprocessing.py  train.py
midterm-project/: Dockerfile  README.md  cleaned_paddy_data.csv  final_preprocessor_pipeline.pkl  neural_network_experiment.ipynb  notebook.ipynb  paddy.ipynb  paddy_yield_model_v1.pkl  pipeline.py  predict.py  preprocessing.ipynb  pyproject.toml  requirements.txt  training.ipynb
