[project]
name = "05-deployment"
version = "0.1.0"
description = "Churn prediction service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "scikit-learn==1.7.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "fastapi>=0.121.0",
    "scikit-learn>=1.7.0",
    "uvicorn>=0.38.0",
]
